# neural

./: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  ann.c  cluster.c  config.h  config.h.in  config.status  configure  configure.ac  meson.build  neural.pc  neural.pc.in  nnet.c  parse.h  rbm.c  rbmrun  rbmrun.c  rbmrunx  rbmrunx.c  rbmtrain  rbmtrain.c  utildefs.h
.deps/: cluster.Po  rbm.Po  rbmrun.Po  rbmrunx.Po  rbmtrain-rbm.Po  rbmtrain-rbmtrain.Po
data/: params-16-layers.dbn  params-8-layers.dbn  params.dbn  test-40
include/: cluster.h  rbm.h
objc/: NNetwork.h  NNetwork.m
share/: params-10.dbn  params-12-layers.dbn  params-20.dbn  test-10  test-20
